# rust-fui

./: .gitignore  Cargo.toml  README.md  wayland.md  workspace.code-workspace
fui/: Cargo.toml  IDEAS.md  LICENSE.txt
fui/doc/: layout.md
fui/src/: application.rs  callback.rs  children_collection.rs  children_source.rs  control.rs  control_context.rs  control_object.rs  drawing_context.rs  event.rs  high_dpi.rs  lib.rs  property.rs  resources.rs  style.rs  view.rs  window.rs  window_manager.rs
fui/src/common/: mod.rs  point.rs  rect.rs  rounding.rs  size.rs
fui/src/control/: control.rs  control_behavior.rs  control_behiavor.rs  control_context.rs  control_object.rs  mod.rs  rc_control.rs  styled_control.rs
fui/src/controls/: bitmap.rs  button.rs  control.rs  mod.rs  scroll_bar.rs  scroll_viewer.rs  text.rs
fui/src/drawing/: mod.rs  resources.rs
fui/src/events/: control_event.rs  event_context.rs  event_processor.rs  gesture_detector.rs  gesture_detector_core.rs  hover_detector.rs  input_event.rs  key_event.rs  mod.rs
fui/src/gestures/: gesture_detector.rs
fui/src/layout/: grid.rs  horizontal.rs  mod.rs  stack_panel.rs  vertical.rs
fui/src/observable/: binding.rs  callback.rs  event.rs  mod.rs  observable_collection.rs  observable_vec.rs  property.rs
fui/src/render/: primitive.rs
fui/src/services/: window_service.rs
fui/src/style/: default_theme.rs  mod.rs  style.rs
fui/src/threading/: dispatcher.rs  mod.rs
fui_app/: Cargo.toml  README.md
fui_app/src/: application.rs  assets.rs  channel_dispatcher.rs  clipboard.rs  dispatcher.rs  drawing_context.rs  event_converter.rs  file_dialog.rs  gl_window.rs  gui_dispatcher.rs  high_dpi.rs  lib.rs  window.rs  window_manager.rs  window_options.rs
fui_app/src/async_code/: application_async.rs  drawing_context_proxy.rs  mod.rs  vm_dispatcher.rs  window_async.rs  window_manager_async.rs
fui_controls/: Cargo.toml  LICENSE.md  README.md
fui_controls/src/: lib.rs
fui_controls/src/controllers/: mod.rs  radio_controller.rs
fui_controls/src/controls/: bitmap.rs  border.rs  busy_indicator.rs  button.rs  drop_down.rs  drop_down_old.rs  menu.rs  menu_item.rs  mod.rs  path_edit.rs  popup.rs  progress_bar.rs  scroll_area.rs  scroll_bar.rs  scroll_viewer.rs  shadow.rs  tab_control.rs  text.rs  text_box.rs  toggle_button.rs
fui_controls/src/dialogs/: input_dialog.rs  message_box.rs  mod.rs
fui_controls/src/layout/: alignment.rs  grid.rs  horizontal.rs  margin.rs  mod.rs  relative_layout.rs  stack_panel.rs  vertical.rs
fui_controls/src/special/: data_holder.rs  gesture_area.rs  mod.rs  move_resize_area.rs
fui_controls/src/style/: default_theme.rs  mod.rs
fui_controls/src/utils/: mod.rs  text_buffer.rs
fui_controls/src/view_models/: mod.rs  string_view_model.rs
fui_controls_media/: Cargo.toml  README.md
fui_controls_media/src/: lib.rs  video_player.rs  video_player_gl.rs
fui_core/: Cargo.toml  README.md
fui_core/src/: children_source.rs  lib.rs  macros.rs  view.rs
fui_core/src/children/: children.rs  children_iterator.rs  children_source.rs  mod.rs  sub_children.rs
fui_core/src/common/: attached_value_registry.rs  color.rs  inherited_type_map.rs  matrix.rs  mod.rs  orientation.rs  point.rs  rect.rs  size.rs  thickness.rs  type_map.rs
fui_core/src/control/: composite_control.rs  control_behavior.rs  control_context.rs  control_object.rs  mod.rs  styled_control.rs
fui_core/src/control/common_attached_values/: alignment.rs  margin.rs  mod.rs  visible.rs
fui_core/src/drawing/: drawing_context.rs  fui_drawing_context.rs  mod.rs  resources.rs
fui_core/src/events/: control_event.rs  event_context.rs  event_processor.rs  gesture_detector.rs  input_event.rs  key_event.rs  mod.rs
fui_core/src/layout/: grid.rs  horizontal.rs  mod.rs  relative_layout.rs  stack_panel.rs  vertical.rs
fui_core/src/menu/: menu_item.rs  mod.rs
fui_core/src/observable/: callback.rs  dispatcher.rs  event.rs  mod.rs  observable_collection.rs  observable_collection_flat_map.rs  observable_collection_map.rs  observable_composite.rs  observable_vec.rs  property.rs  subscription.rs
fui_core/src/services/: clipboard_service.rs  file_dialog_service.rs  mod.rs  services.rs  window_service.rs
fui_core/src/style/: style.rs
fui_core/src/task/: join_handle.rs  mod.rs  spawn.rs
fui_core/src/window/: mod.rs  window.rs
fui_drawing/: Cargo.toml  README.md
fui_drawing/src/: lib.rs
fui_examples/: Cargo.toml  README.md
fui_examples/src/: example1.rs  example1_button.rs  example2_multiwindow.rs  example3_controls.rs  example3_layout.rs  example3_video.rs  example4_list.rs  example4_video.rs  example5_contentcontrol.rs  example5_video.rs  example6_video.rs  example7_tray.rs  example8_async.rs  example8_noframe.rs
fui_macros/: .gitignore  Cargo.toml  LICENSE.md  README.md
fui_macros/src/: lib.rs  parser.rs
fui_macros/tests/: test1.rs
fui_macros_impl/: Cargo.toml  README.md
fui_macros_impl/src/: lib.rs  parser.rs
fui_system/: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
fui_system/examples/: example1.rs  example1_tray.rs  example2_popup.rs
fui_system/src/: lib.rs
fui_system/src/common/: callback_helper.rs  event.rs  menu_item.rs  mod.rs  system_menu_item.rs
fui_system/src/platform/: mod.rs
fui_system/src/platform/linux_qt/: mod.rs  system_tray.rs
fui_system/src/platform/qt/: application.rs  application_options.rs  cursor_shape.rs  dispatcher.rs  edge.rs  file_dialog.rs  icon.rs  loop_proxy.rs  mod.rs  system_application.rs  system_tray.rs  system_window.rs  tray_icon.rs  window.rs  window_frame_type.rs
fui_system/src/qt_wrapper/: mod.rs  qaction.rs  qapplication.rs  qicon.rs  qmenu.rs  qpixmap.rs  qslot.rs  qstring.rs  qsystemtrayicon.rs  qwindow.rs
fui_system/src/qt_wrapper/cpp/: qaction.cpp  qaction.h  qmenu.cpp  qmenu.h  qpixmap.cpp  qpixmap.h  qslot.cpp  qslot.h  (+9 more)
fui_system_core/: Cargo.toml  README.md
fui_system_core/src/: event.rs  lib.rs  translucent_effect.rs
fui_tray/: Cargo.toml  README.md
fui_video/: Cargo.toml
fui_video/src/: lib.rs  video_player.rs  video_player_gl.rs
(+99 files in other folders)
