[package]
name = "fui"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
drawing = { path = "../../rust-drawing/drawing", version = "*" }
drawing_gl = { path = "../../rust-drawing/drawing_gl", version = "*" }
failure = "*"
#winit = "*"
winit = { git = "https://github.com/marek-g/winit" }
shared_library = "*"
find_folder = "*"
