[package]
name = "fui"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
drawing = { path = "../../rust-drawing/drawing", version = "*" }
drawing_gl = { path = "../../rust-drawing/drawing_gl", version = "*" }
failure = "0.1"
winit = "0.20.0-alpha3"
shared_library = "0.1"
find_folder = "0.3"
typed-builder = "0.3"
typemap = "0.3"
