[package]
name = "fui_controls"
version = "0.16.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Standard controls for FUI UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_controls"
readme = "README.md"
edition = "2021"

[dependencies]
fui_core = { path = "../../rust-fui/fui_core", version = "0.16" }
fui_macros = { path = "../../rust-fui/fui_macros", version = "0.4" }
windowing_api = "0.13"
#drawing = { path = "../../rust-drawing/drawing", version = "0.4" }
drawing = "0.4"
euclid = "0.22"
typed-builder = "0.18"
typemap = "0.3"
futures-channel = "0.3"
