[package]
name = "fui_controls"
version = "0.18.0-pre"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Standard controls for FUI UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_controls"
readme = "README.md"
edition = "2024"

[dependencies]
fui_core = { path = "../../rust-fui/fui_core", version = "0.18.0-pre" }
fui_drawing = { path = "../../rust-fui/fui_drawing", version = "0.18.0-pre" }
fui_macros = { path = "../../rust-fui/fui_macros", version = "0.18.0-pre" }
windowing_api = "0.13"
typed-builder = "0.23"
typemap = "0.3"
futures-channel = "0.3"
