[package]
name = "fui_controls_media"
version = "0.11.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Media controls for FUI UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_media"
readme = "README.md"
edition = "2021"

[dependencies]
fui_core = { path = "../fui_core", version = "0.11" }
fui_app = { path = "../../rust-fui/fui_app", version = "0.11" }
drawing = { path = "../../rust-drawing/drawing", version = "0.3" }
drawing_gl = { path = "../../rust-drawing/drawing_gl", version = "0.3" }
media_gstreamer = { path = "../../rust-media/media_gstreamer", version = "0.2" }
#drawing = "0.1"
#drawing_gl = "0.1"
#media_gstreamer = "0.1"
anyhow = "1.0"
gstreamer = "0.18"
gstreamer-sys = "0.18"
gstreamer-app = "0.18"
gstreamer-video = "0.18"
gstreamer-video-sys = "0.18"
glib = "0.15"
glutin = "0.28"
gl = "0.14"
winit = "0.26"
time = "0.3"
