[package]
name = "fui_core"
version = "0.5.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Core library of FUI MVVM UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_core"
readme = "../README.md"
edition = "2021"

[dependencies]
fui_macros = { path = "../fui_macros", version = "0.3" }
drawing = { path = "../../rust-drawing/drawing", version = "0.3" }
anyhow = "1.0"
typed-builder = "0.10"
typemap = "0.3"
futures-signals = "0.3"
tokio = { version = "1", features = ["full"] }
