[package]
name = "fui_examples"
version = "0.2.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Examples for FUI UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_examples"
readme = "README.md"
edition = "2018"

[dependencies]
fui_core = { path = "../fui_core", version = "0.2" }
fui_controls = { path = "../../rust-fui/fui_controls", version = "0.2" }
fui_macros = { path = "../../rust-fui/fui_macros", version = "0.3" }
fui_app = { path = "../../rust-fui/fui_app", version = "0.2" }
fui_system = { path = "../../rust-fui/fui_system", version = "0.3" }
anyhow = "1.0"
time = "0.2"
typed-builder = "0.7"
typemap = "0.3"

tokio = { version = "1", features = ["full"], optional = true }
fui_controls_media = { path = "../../rust-fui/fui_controls_media", version = "0.2", optional = true }

[features]
async = ["tokio", "fui_app/async"]
video = ["fui_controls_media"]

[[bin]]
name = "example1_button"
path = "src/example1_button.rs"

[[bin]]
name = "example2_multiwindow"
path = "src/example2_multiwindow.rs"

[[bin]]
name = "example3_controls"
path = "src/example3_controls.rs"

[[bin]]
name = "example4_list"
path = "src/example4_list.rs"

[[bin]]
name = "example5_contentcontrol"
path = "src/example5_contentcontrol.rs"

[[bin]]
name = "example6_video"
path = "src/example6_video.rs"
required-features = ["video"]

[[bin]]
name = "example7_tray"
path = "src/example7_tray.rs"

[[bin]]
name = "example8_async"
path = "src/example8_async.rs"
required-features = ["async"]