[package]
name = "fui_examples"
version = "0.16.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Examples for FUI UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_examples"
readme = "README.md"
edition = "2021"

[dependencies]
fui_core = { path = "../fui_core", version = "0.16" }
fui_controls = { path = "../../rust-fui/fui_controls", version = "0.16" }
fui_macros = { path = "../../rust-fui/fui_macros", version = "0.4" }
fui_app = { path = "../../rust-fui/fui_app", version = "0.17.0" }
windowing_qt = "0.14.0"
windowing_api = "0.13"
anyhow = "1.0"
time = "0.3"
typed-builder = "0.18"
typemap = "0.3"
tokio = { version = "1", features = ["full"] }

fui_controls_media = { path = "../../rust-fui/fui_controls_media", version = "0.16.0", optional = true }

[features]
video = ["fui_controls_media"]

[[bin]]
name = "example1_button"
path = "src/example1_button.rs"

[[bin]]
name = "example2_multiwindow"
path = "src/example2_multiwindow.rs"

[[bin]]
name = "example3_controls"
path = "src/example3_controls.rs"

[[bin]]
name = "example4_list"
path = "src/example4_list.rs"

[[bin]]
name = "example5_contentcontrol"
path = "src/example5_contentcontrol.rs"

[[bin]]
name = "example6_video"
path = "src/example6_video.rs"
required-features = ["video"]

[[bin]]
name = "example7_tray"
path = "src/example7_tray.rs"

[[bin]]
name = "example8_noframe"
path = "src/example8_noframe.rs"
