[package]
name = "fui_macros"
version = "0.1.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Macros for FUI UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "LGPL-2.1-or-later WITH WxWindows-exception-3.1"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_macros"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features=["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
typed-builder = "0.7"
typemap = "0.3"
