[package]
name = "fui_macros"
version = "0.4.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Macros for FUI UI Framework"
keywords = ["gui", "ui", "framework", "mvvm", "widgets"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_macros"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features=["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
typed-builder = "0.18"
typemap = "0.3"
