[package]
name = "fui_system"
version = "0.13.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "System controls (dialogs, tray etc.) for FUI UI Framework"
keywords = ["windowing", "gui", "framework", "dialog", "tray"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_system"
readme = "README.md"
edition = "2021"

[dependencies]
fui_system_core = { path = "../fui_system_core", version = "0.13" }
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.26"
bindgen = "0.69"

[dev-dependencies]
rust-embed = "8.4"
gl = "0.14"
