[package]
name = "fui_system_core"
version = "0.1.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Core system elements for FUI libraries"
keywords = ["windowing", "gui", "framework", "dialog", "tray"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_system"
readme = "README.md"
edition = "2018"

[dependencies]
thiserror = "1.0"

[build-dependencies]
cbindgen = "0.19.0"
bindgen = "0.58.1"

[dev-dependencies]
rust-embed = "5.8.0"
gl = "0.14.0"
