[package]
name = "fui_system_core"
version = "0.12.0"
authors = ["Marek Gibek <marek-dev@yandex.com>"]
description = "Core system elements for FUI libraries"
keywords = ["windowing", "gui", "framework", "dialog", "tray"]
categories = ["gui"]
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/marek-g/rust-fui"
documentation = "https://docs.rs/fui_system"
readme = "README.md"
edition = "2021"

[dependencies]
bitflags = "2.1"