[package]
name = "fui_video"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
drawing = { path = "../../rust-drawing/drawing", version = "*" }
fui = { path = "../../rust-fui/fui", version = "*" }
gstreamer_media = { path = "../../rust-media/gstreamer_media", version = "*" }
failure = "*"
gstreamer = "*"
gstreamer-app = "*"
glutin = { git = "https://github.com/marek-g/glutin" }
winit = "*"
time = "*"
