[package]
name = "fui_video"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
drawing = { path = "../../rust-drawing/drawing", version = "*" }
drawing_gl = { path = "../../rust-drawing/drawing_gl", version = "*" }
fui = { path = "../../rust-fui/fui", version = "*" }
gstreamer_media = { path = "../../rust-media/gstreamer_media", version = "*" }
failure = "*"
gstreamer = "*"
gstreamer-sys = "*"
gstreamer-app = "*"
gstreamer-video = "*"
gstreamer-video-sys = "*"
glib = "*"
glutin = "*"
#glutin = { git = "https://github.com/marek-g/glutin" }
gl = "*"
winit = "*"
#winit = { git = "https://github.com/marek-g/winit" }
time = "*"
