[package]
name = "fui_video"
version = "0.1.0"
authors = ["Marek G <no@mail.com>"]

[dependencies]
drawing = { path = "../../rust-drawing/drawing", version = "*" }
drawing_gl = { path = "../../rust-drawing/drawing_gl", version = "*" }
fui = { path = "../../rust-fui/fui", version = "*" }
gstreamer_media = { path = "../../rust-media/gstreamer_media", version = "*" }
failure = "0.1"
gstreamer = "0.14"
gstreamer-sys = "0.8"
gstreamer-app = "0.14"
gstreamer-video = "0.14"
gstreamer-video-sys = "0.8"
glib = "0.8"
glutin = "0.21"
gl = "0.14"
winit = "0.19"
time = "0.1"
